--- a/src/components/tCards/tcard.scss
+++ b/src/components/tCards/tcard.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   border: 10px double purple;
   border-radius: 20px;
-  backdrop-filter: 10px;
+  background: rgba(black, 0.1);
   img {
     transform: scale(0.5);
     width: 150px;
