--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,14 @@
 .App {
   max-width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(
-    to top left,
-    rgba(255, 2, 2, 0.5),
-    rgba(0, 0, 225, 0.5)
-  );
+  background-image: linear-gradient(to top left, rgba(255, 2, 2, 0.5), rgba(0, 0, 225, 0.5));
   overflow-x: hidden;
   word-wrap: break-word;
   color: $pry-text;
   position: relative;
+}
+em {
+  font-style: normal;
 }
 .blob {
   position: absolute;
@@ -30,12 +29,8 @@ button {
   border: none;
   background: $primary-color;
   color: white;
-  box-shadow: 2px 3px 20px rgba(0, 0, 225, 0.5);
+  // box-shadow: 2px 3px 20px rgba(0, 0, 225, 0.5);
   &:hover {
-    background-image: linear-gradient(
-      to top left,
-      rgba(255, 2, 2, 0.5),
-      rgba(0, 0, 225, 0.5)
-    );
+    background-image: linear-gradient(to top left, rgba(255, 2, 2, 0.5), rgba(0, 0, 225, 0.5));
   }
 }
