--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -16,68 +16,132 @@
   font-weight: bold;
 }
 
-.projects .img-container {
+.project {
+  width: 100vw;
+  padding: 1rem;
   display: flex;
   gap: 0;
-  align-items: start;
+  align-items: center;
   justify-content: center;
   flex-direction: row;
   position: relative;
-  max-width: 16.7rem;
-  border-radius: 20px;
-  overflow-y: hidden;
-  cursor: pointer;
 }
-.projects .img-container img {
-  height: 200px;
-  border-radius: 20px;
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
-  width: 16.7rem;
+.project .img-container {
+  border-radius: 5px;
+  overflow: hidden;
+}
+.project .img-container img {
+  width: 700px;
+  height: 450px;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  filter: grayscale(100%) blur(5px);
+  cursor: pointer;
+  transition: 500ms;
 }
-.projects .img-container .overlay {
-  height: 200px;
-  width: 16.7rem;
-  border-radius: 20px;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
-  top: 0;
+.project .img-container img:hover {
+  filter: grayscale(0%);
+}
+.project .content-container {
+  background: rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  border-radius: 5px;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   display: flex;
-  gap: 0;
-  align-items: center;
+  gap: 10px;
+  align-items: flex-end;
   justify-content: center;
   flex-direction: column;
-  font-size: 30px;
+  width: 500px;
+  position: relative;
+  right: 4rem;
+  transition: 500ms;
+  cursor: pointer;
+}
+.project .content-container .header {
+  width: 100%;
+  display: flex;
+  gap: 7px;
+  align-items: flex-end;
+  justify-content: center;
+  flex-direction: column;
+}
+.project .content-container .header em {
   font-weight: bold;
 }
-.projects .img-container:hover .overlay {
-  -webkit-animation: slideOut 0.5s forwards;
-          animation: slideOut 0.5s forwards;
+.project .content-container .header em:first-of-type {
+  font-size: 16px;
+  color: #670067;
 }
-.projects .description {
-  width: 320px;
-  word-wrap: break-word;
-  font-size: 17px;
-  text-align: center;
+.project .content-container .header em:last-of-type {
+  font-size: 25px;
 }
-.projects .links {
+.project .content-container .content {
+  min-height: 100px;
+  width: 100%;
+  background: #670067;
+  border-radius: 5px;
+  color: white;
+  padding: 1rem;
+  text-align: right;
+  font-size: 16px;
+}
+.project .content-container .tech {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.project .content-container .tech em {
+  font-size: 15px;
+  color: darkblue;
+}
+.project .content-container .actions {
   display: flex;
   gap: 1rem;
   align-items: center;
-  justify-content: center;
-  margin-top: 10px;
+  justify-content: flex-end;
+  flex-direction: row;
 }
-.projects .links button {
-  box-shadow: none;
+.project .content-container .actions i {
+  font-size: 25px;
+  transition: 200ms;
 }
-
-@-webkit-keyframes slideOut {
-  from {
-    left: 0;
+.project .content-container .actions i:hover {
+  color: #670067;
+}
+.project .content-container:hover {
+  transform: scale(1.03);
+}
+@media (max-width: 801px) {
+  .project {
+    min-height: 700px;
+    justify-content: start;
   }
-  to {
-    left: -500px;
+  .project .content-container {
+    width: 70vw;
+    position: absolute;
+    right: 1rem;
+    bottom: 2rem;
+  }
+  .project .img-container {
+    width: 70vw;
+    height: auto;
+  }
+}
+@media (max-width: 501px) {
+  .project .content-container {
+    position: absolute;
+    width: 90vw;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    left: 0;
   }
 }
 
