--- a/src/components/tCards/tcard.css
+++ b/src/components/tCards/tcard.css
@@ -8,8 +8,7 @@
   justify-content: center;
   border: 10px double purple;
   border-radius: 20px;
-  -webkit-backdrop-filter: 10px;
-          backdrop-filter: 10px;
+  background: rgba(0, 0, 0, 0.1);
 }
 .tcard img {
   transform: scale(0.5);
