--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -17,7 +17,7 @@
 }
 
 .project {
-  width: 100vw;
+  width: 100%;
   padding: 1rem;
   display: flex;
   gap: 0;
@@ -35,8 +35,8 @@
   height: 450px;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  -o-object-position: top left;
+     object-position: top left;
   filter: grayscale(100%) blur(5px);
   cursor: pointer;
   transition: 500ms;
@@ -118,6 +118,26 @@
 .project .content-container:hover {
   transform: scale(1.03);
 }
+.project:nth-of-type(2n) {
+  flex-direction: row-reverse;
+}
+.project:nth-of-type(2n) .content-container {
+  right: 0;
+  left: 4rem;
+}
+.project:nth-of-type(2n) .content-container .header {
+  align-items: start;
+}
+.project:nth-of-type(2n) .content-container .content {
+  text-align: left;
+}
+.project:nth-of-type(2n) .content-container .tech {
+  justify-content: start;
+}
+.project:nth-of-type(2n) .content-container .actions {
+  justify-content: start;
+  width: 100%;
+}
 @media (max-width: 801px) {
   .project {
     min-height: 700px;
@@ -135,14 +155,121 @@
   }
 }
 @media (max-width: 501px) {
-  .project .content-container {
+  .project .img-container {
     position: absolute;
     width: 90vw;
+  }
+  .project .img-container img {
+    width: 90vw;
+  }
+  .project .content-container {
+    position: relative;
+    width: 90vw;
+    min-height: 450px;
     right: 0;
     bottom: 0;
     top: 0;
     left: 0;
   }
+  .project:nth-of-type(2n) .content-container {
+    left: 0;
+  }
+  .project:hover .img-container img {
+    filter: grayscale(0%);
+    z-index: 5;
+  }
+}
+
+.other-projects-container {
+  padding: 1rem 8rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  gap: 2rem;
+}
+@media (max-width: 1401px) {
+  .other-projects-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 1051px) {
+  .other-projects-container {
+    padding: 1rem 1rem;
+    align-items: center;
+    justify-items: center;
+  }
+}
+@media (max-width: 701px) {
+  .other-projects-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.other-project {
+  background: #670067;
+  border-radius: 5px;
+  padding: 1rem;
+  display: flex;
+  gap: 2rem;
+  align-items: start;
+  justify-content: start;
+  flex-direction: column;
+  cursor: pointer;
+  position: relative;
+  transition: 0.2s;
+  max-width: 400px;
+}
+.other-project > * {
+  width: 100%;
+}
+.other-project .actions-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.other-project .actions-container > a i {
+  font-size: 30px;
+}
+.other-project .actions-container i {
+  transition: 200ms;
+}
+.other-project .actions-container i:hover {
+  color: #764ce7;
+}
+.other-project .actions-container .actions {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  font-size: 20px;
+}
+.other-project .content-container {
+  min-height: 150px;
+}
+.other-project .content-container .header {
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.other-project .content-container .content {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.9);
+}
+.other-project .tech {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: start;
+  flex-direction: row;
+}
+.other-project .tech em {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.8);
+}
+.other-project:hover {
+  transform: scale(1.05);
 }
 
 @keyframes slideOut {
@@ -154,6 +281,9 @@
   }
 }
 @media only screen and (max-width: 420px) {
+  .p-main {
+    padding: 30px 0;
+  }
   .p-main .head h2 {
     text-align: center;
   }
