--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,4 +1,6 @@
 @import "../../variables";
+$pry-color: darken(#800080, 5);
+
 .p-contain {
   margin-top: 150px;
 }
@@ -16,7 +18,7 @@
 }
 
 .project {
-  width: 100vw;
+  width: 100%;
   padding: 1rem;
   @include flex2(center, center, 0, row);
   position: relative;
@@ -27,7 +29,7 @@
       width: 700px;
       height: 450px;
       object-fit: cover;
-      object-position: center;
+      object-position: top left;
       filter: grayscale(100%) blur(5px);
       cursor: pointer;
       transition: 500ms;
@@ -54,7 +56,7 @@
         font-weight: bold;
         &:first-of-type {
           font-size: 16px;
-          color: darken(#800080, 5);
+          color: $pry-color;
         }
         &:last-of-type {
           font-size: 25px;
@@ -64,7 +66,7 @@
     .content {
       min-height: 100px;
       width: 100%;
-      background: darken(#800080, 5);
+      background: $pry-color;
       border-radius: 5px;
       color: white;
       padding: 1rem;
@@ -94,6 +96,27 @@
     }
   }
 
+  &:nth-of-type(2n) {
+    flex-direction: row-reverse;
+    .content-container {
+      right: 0;
+      left: 4rem;
+      .header {
+        align-items: start;
+      }
+      .content {
+        text-align: left;
+      }
+      .tech {
+        justify-content: start;
+      }
+      .actions {
+        justify-content: start;
+        width: 100%;
+      }
+    }
+  }
+
   @include media(max, 801px) {
     min-height: 700px;
     justify-content: start;
@@ -110,14 +133,100 @@
   }
 
   @include media(max, 501px) {
-    .content-container {
+    .img-container {
       position: absolute;
       width: 90vw;
+      img {
+        width: 90vw;
+      }
+    }
+    .content-container {
+      position: relative;
+      width: 90vw;
+      min-height: 450px;
       right: 0;
       bottom: 0;
       top: 0;
       left: 0;
     }
+    &:nth-of-type(2n) {
+      .content-container {
+        left: 0;
+      }
+    }
+    &:hover {
+      .img-container img {
+        filter: grayscale(0%);
+        z-index: 5;
+      }
+    }
+  }
+}
+
+.other-projects-container {
+  padding: 1rem 8rem;
+  @include grid(repeat(3, 1fr), auto, 2rem);
+  @include media(max, 1401px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include media(max, 1051px) {
+    padding: 1rem 1rem;
+    align-items: center;
+    justify-items: center;
+  }
+  @include media(max, 701px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.other-project {
+  background: $pry-color;
+  border-radius: 5px;
+  padding: 1rem;
+  @include flex2(start, start, 2rem, column);
+  cursor: pointer;
+  position: relative;
+  transition: 0.2s;
+  max-width: 400px;
+  & > * {
+    width: 100%;
+  }
+  .actions-container {
+    @include flex2(center, space-between, 1rem, row);
+    & > a i {
+      font-size: 30px;
+    }
+    i {
+      transition: 200ms;
+      &:hover {
+        color: lighten(#541fe1, 10);
+      }
+    }
+    .actions {
+      @include flex2(center, center, 1rem, row);
+      font-size: 20px;
+    }
+  }
+  .content-container {
+    min-height: 150px;
+    .header {
+      font-weight: bold;
+      text-transform: capitalize;
+    }
+    .content {
+      font-size: 16px;
+      color: rgba(white, 0.9);
+    }
+  }
+  .tech {
+    @include flex2(center, start, 10px, row);
+    em {
+      font-size: 15px;
+      color: rgba(white, 0.8);
+    }
+  }
+  &:hover {
+    transform: scale(1.05);
   }
 }
 
@@ -132,6 +241,7 @@
 
 @media only screen and (max-width: 420px) {
   .p-main {
+    padding: 30px 0;
     .head {
       h2 {
         text-align: center;
