--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
   padding: 0;
 }
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 85vh;
+  width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
