Added animations to most of the components using react-intersection-group, framer-motion libraries

--- a/src/components/circles/circlesSection.scss
+++ b/src/components/circles/circlesSection.scss
@@ -4,7 +4,7 @@
   @include flex(center);
   justify-content: center;
   gap: 5rem;
-  transform: scale(0);
+  // transform: scale(0);
 }
 
 .c-animate {
