--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -22,7 +22,7 @@ header .profile {
   grid-row: 1/5;
   background-color: rgba(255, 255, 255, 0.3);
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   border-radius: 20px;
   padding: 10px;
   grid-template-columns: repeat(3, 1fr);
@@ -100,16 +100,18 @@ header .profile .img-container img {
   left: 0;
   top: 0 !important;
   height: 98vh;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.8);
   list-style-type: none;
   z-index: 999;
   margin: 5px 0;
   padding: 3rem 20px;
   border-radius: 10px;
-  display: grid;
+  display: flex;
+  gap: 3rem;
   align-items: center;
-  justify-items: center;
-  grid-auto-rows: minmax(10px, auto);
+  justify-content: flex-start;
+  flex-direction: column;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   text-align: center;
