--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -24,7 +24,7 @@ header {
     grid-row: 1/5;
     background-color: rgba(white, 0.3);
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     border-radius: 20px;
     padding: 10px;
     grid-template-columns: repeat(3, 1fr);
@@ -95,17 +95,18 @@ header {
   left: 0;
   top: 0 !important;
   height: 98vh;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.8);
   list-style-type: none;
   z-index: 999;
   margin: 5px 0;
   padding: 3rem 20px;
   border-radius: 10px;
-  // @include flex2(center, flex-start, 3rem, column);
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  grid-auto-rows: minmax(10px, auto);
+  @include flex2(center, flex-start, 3rem, column);
+  // display: grid;
+  // align-items: center;
+  // justify-items: center;
+  // grid-auto-rows: minmax(10px, auto);
   backdrop-filter: blur(10px);
   text-align: center;
   > li {
