--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -22,7 +22,8 @@ header .profile {
   grid-row: 1/5;
   background-color: rgba(255, 255, 255, 0.3);
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  min-height: 200px;
   border-radius: 20px;
   padding: 10px;
   grid-template-columns: repeat(3, 1fr);
@@ -108,7 +109,7 @@ header .profile .img-container img {
   padding: 3rem 20px;
   border-radius: 10px;
   display: flex;
-  gap: 3rem;
+  gap: 0.5rem;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
