--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -24,7 +24,8 @@ header {
     grid-row: 1/5;
     background-color: rgba(white, 0.3);
     width: 100%;
-    min-height: 100%;
+    height: 100%;
+    min-height: 200px;
     border-radius: 20px;
     padding: 10px;
     grid-template-columns: repeat(3, 1fr);
@@ -102,7 +103,7 @@ header {
   margin: 5px 0;
   padding: 3rem 20px;
   border-radius: 10px;
-  @include flex2(center, flex-start, 3rem, column);
+  @include flex2(center, flex-start, 0.5rem, column);
   // display: grid;
   // align-items: center;
   // justify-items: center;
