--- a/src/components/testimonial/testimonial.scss
+++ b/src/components/testimonial/testimonial.scss
@@ -11,26 +11,43 @@
     }
   }
   .testimonial {
-    max-width: 700px;
-    padding: 40px;
-    border-radius: 50px;
-    border: 10px double purple;
-    background: rgba(225, 225, 225, 0.2);
-    backdrop-filter: 20px;
-    p {
+    max-width: 500px;
+    border-radius: 20px;
+    background: $pry-color;
+    position: relative;
+    & * {
       font-size: 16px;
     }
+    .img-container {
+      @include flex2(center, center, 5px, column);
+      padding: 10px;
+      background-color: white;
+      border-radius: 20px;
+      width: 200px;
+      // position: absolute;
+      img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 50%;
+      }
+      .actions {
+        @include flex2(center, center, 1rem, row);
 
-    img {
-      height: 170px;
-      border-radius: 50px;
+        i {
+          font-size: 20px;
+        }
+      }
+      & * {
+        color: $pry-color;
+      }
     }
-  }
-
-  .slider {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    p {
+      margin-top: 0.5rem;
+      padding: 1rem;
+      text-align: left;
+    }
   }
 }
 
@@ -48,7 +65,7 @@
 
     .slider {
       .testimonial {
-        transform: scale(0.8);
+        transform: scale(0.9);
       }
     }
   }
