--- a/src/components/testimonial/testimonial.css
+++ b/src/components/testimonial/testimonial.css
@@ -56,6 +56,14 @@
   padding: 1rem;
   text-align: left;
 }
+.contain .each-slide {
+  width: 100%;
+  display: flex;
+  gap: 0;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
 
 @media only screen and (max-width: 420px) {
   .contain .t-main {
