--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -29,6 +29,10 @@
 .project .img-container {
   border-radius: 5px;
   overflow: hidden;
+  width: 700px;
+  height: 450px;
+  cursor: pointer;
+  position: relative;
 }
 .project .img-container img {
   width: 700px;
@@ -37,12 +41,26 @@
      object-fit: cover;
   -o-object-position: top left;
      object-position: top left;
-  filter: grayscale(100%) blur(5px);
-  cursor: pointer;
+  filter: grayscale(100%);
   transition: 500ms;
+  position: relative;
 }
-.project .img-container img:hover {
+.project .img-container::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(103, 0, 103, 0.5);
+  z-index: 1;
+  transition: 200ms;
+}
+.project .img-container:hover img {
   filter: grayscale(0%);
+}
+.project .img-container:hover::before {
+  background: rgba(103, 0, 103, 0);
 }
 .project .content-container {
   background: rgba(0, 0, 0, 0.1);
@@ -59,6 +77,7 @@
   position: relative;
   right: 4rem;
   transition: 500ms;
+  z-index: 1;
   cursor: pointer;
 }
 .project .content-container .header {
@@ -99,7 +118,7 @@
 }
 .project .content-container .tech em {
   font-size: 15px;
-  color: darkblue;
+  color: white;
 }
 .project .content-container .actions {
   display: flex;
