--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -24,16 +24,36 @@
   .img-container {
     border-radius: 5px;
     overflow: hidden;
+    width: 700px;
+    height: 450px;
+    cursor: pointer;
+    position: relative;
     img {
       width: 700px;
       height: 450px;
       object-fit: cover;
       object-position: top left;
-      filter: grayscale(100%) blur(5px);
-      cursor: pointer;
+      filter: grayscale(100%);
       transition: 500ms;
-      &:hover {
+      position: relative;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: rgba($pry-color, 0.5);
+      z-index: 1;
+      transition: 200ms;
+    }
+    &:hover {
+      img {
         filter: grayscale(0%);
+      }
+      &::before {
+        background: rgba($pry-color, 0);
       }
     }
   }
@@ -47,6 +67,7 @@
     position: relative;
     right: 4rem;
     transition: 500ms;
+    z-index: 1;
     cursor: pointer;
     .header {
       width: 100%;
@@ -77,7 +98,7 @@
       flex-wrap: wrap;
       em {
         font-size: 15px;
-        color: darkblue;
+        color: white;
       }
     }
     .actions {
